--- a/.github/workflows/check-versions.yml
+++ b/.github/workflows/check-versions.yml
@@ -3,11 +3,6 @@ name: Check Versions
 on:
   pull_request:
     branches: [main]
-    paths: # FIXME: remove these ignore paths!
-      - "!domains/emissions/.check-versions.json"
-      - "!domains/measurements/.check-versions.json"
-      - "!libraries/dotnet/EnergyOriginAuthorization/.check-versions.json"
-      - "!libraries/dotnet/EnergyOriginDateTimeExtension/.check-versions.json"
 
 jobs:
   define-matrix:
@@ -47,7 +42,8 @@ jobs:
           echo "$pattern"
           echo '::endgroup::'
 
-          matrix=$(find domains libraries/dotnet -name ".check-versions.json" | egrep "$pattern" | while read file; do tr -d '\n' < "$file"; done | jq -sc '. | flatten')
+          # FIXME: re-enable checking non-oidc-mock
+          matrix=$(find domains libraries/dotnet -name ".check-versions.json" | egrep "$pattern" | egrep oidc-mock | while read file; do tr -d '\n' < "$file"; done | jq -sc '. | flatten')
 
           echo "::set-output name=matrix::${matrix}"
 
