--- a/.github/workflows/check-versions.yml
+++ b/.github/workflows/check-versions.yml
@@ -26,7 +26,7 @@ jobs:
         id: define-matrix
         shell: bash
         run: |
-          pattern=$(find domains libraries/dotnet -type d -mindepth 1 -maxdepth 1 -exec printf '^%s|' {} \; | sed 's/|$//g')
+          pattern=$(find domains libraries/dotnet -mindepth 1 -maxdepth 1 -type d -exec printf '^%s|' {} \; | sed 's/|$//g')
 
           echo '::group::Search pattern'
           echo "$pattern"
@@ -36,7 +36,7 @@ jobs:
           git diff --stat=10000 main
           echo '::endgroup::'
 
-          pattern=$(git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs printf '^%s|' | sed 's/|$//g')
+          pattern=$(git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs -r printf '^%s|' | sed 's/|$//g')
 
           echo '::group::Relevance pattern'
           echo "$pattern"
