--- a/.github/workflows/check-versions.yml
+++ b/.github/workflows/check-versions.yml
@@ -36,15 +36,9 @@ jobs:
           git diff --stat=10000 main
           echo '::endgroup::'
 
-          set -x +e
-
-          git diff --stat=10000 main | sed 's/^ *//g'
-
-          echo more
-
-          git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern"
-
+          set +e
           pattern=$(git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs -r printf '^%s|' | sed 's/|$//g')
+          set -e
 
           echo '::group::Relevance pattern'
           echo "$pattern"
@@ -53,6 +47,7 @@ jobs:
           if [ -z "$pattern" ]; then
             echo 'Relevance pattern is empty, emitting empty matrix.'
             echo '::set-output name=matrix::[]'
+            exit 0
           fi
 
           matrix=$(find domains libraries/dotnet -name ".check-versions.json" | egrep "$pattern" | while read file; do tr -d '\n' < "$file"; done | jq -sc '. | flatten')
