--- a/.github/workflows/check-licenses.yml
+++ b/.github/workflows/check-licenses.yml
@@ -62,6 +62,7 @@ jobs:
   check-licenses:
     runs-on: ubuntu-latest
     needs: define-matrix
+    if: ${{ needs.define-matrix.outputs.matrix != '[]' }}
     strategy:
       matrix:
         projects: ${{ fromJson(needs.define-matrix.outputs.matrix) }}
