--- a/.github/workflows/check-versions.yml
+++ b/.github/workflows/check-versions.yml
@@ -61,6 +61,7 @@ jobs:
   check-version:
     runs-on: ubuntu-latest
     needs: define-matrix
+    if: ${{ needs.define-matrix.outputs.matrix != '[]' }}
     strategy:
       matrix:
         configuration: ${{ fromJson(needs.define-matrix.outputs.matrix) }}
