--- a/.github/workflows/check-licenses.yml
+++ b/.github/workflows/check-licenses.yml
@@ -26,7 +26,7 @@ jobs:
         id: define-matrix
         shell: bash
         run: |
-          pattern=$(find domains libraries/dotnet -type d -mindepth 1 -maxdepth 1 -exec printf '^%s|' {} \; | sed 's/|$//g')
+          pattern=$(find domains libraries/dotnet -mindepth 1 -maxdepth 1 -type d -exec printf '^%s|' {} \; | sed 's/|$//g')
 
           echo '::group::Search pattern'
           echo "$pattern"
@@ -36,11 +36,19 @@ jobs:
           git diff --stat=10000 main
           echo '::endgroup::'
 
-          pattern=$(git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs printf '^%s|' | sed 's/|$//g')
+          set +e
+          pattern=$(git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs -r printf '^%s|' | sed 's/|$//g')
+          set -e
 
           echo '::group::Relevance pattern'
           echo "$pattern"
           echo '::endgroup::'
+
+          if [ -z "$pattern" ]; then
+            echo 'Relevance pattern is empty, emitting empty matrix.'
+            echo '::set-output name=matrix::[]'
+            exit 0
+          fi
 
           # FIXME: re-enable checking Tests projects
           matrix=$(find domains libraries/dotnet -name "*.csproj" -exec dirname {} \; | egrep "$pattern" | egrep -v 'ests$' | while read directory; do printf '{"project": "%s"}' "$directory"; done | jq -sc '.')
@@ -54,6 +62,7 @@ jobs:
   check-licenses:
     runs-on: ubuntu-latest
     needs: define-matrix
+    if: ${{ needs.define-matrix.outputs.matrix != '[]' }}
     strategy:
       matrix:
         projects: ${{ fromJson(needs.define-matrix.outputs.matrix) }}
