--- a/.github/workflows/check-versions.yml
+++ b/.github/workflows/check-versions.yml
@@ -26,7 +26,7 @@ jobs:
         id: define-matrix
         shell: bash
         run: |
-          pattern=$(find domains libraries/dotnet -type d -mindepth 1 -maxdepth 1 -exec printf '^%s|' {} \; | sed 's/|$//g')
+          pattern=$(find domains libraries/dotnet -mindepth 1 -maxdepth 1 -type d -exec printf '^%s|' {} \; | sed 's/|$//g')
 
           echo '::group::Search pattern'
           echo "$pattern"
@@ -36,14 +36,21 @@ jobs:
           git diff --stat=10000 main
           echo '::endgroup::'
 
-          pattern=$(git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs printf '^%s|' | sed 's/|$//g')
+          set +e
+          pattern=$(git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs -r printf '^%s|' | sed 's/|$//g')
+          set -e
 
           echo '::group::Relevance pattern'
           echo "$pattern"
           echo '::endgroup::'
 
-          # FIXME: re-enable checking non-oidc-mock
-          matrix=$(find domains libraries/dotnet -name ".check-versions.json" | egrep "$pattern" | egrep oidc-mock | while read file; do tr -d '\n' < "$file"; done | jq -sc '. | flatten')
+          if [ -z "$pattern" ]; then
+            echo 'Relevance pattern is empty, emitting empty matrix.'
+            echo '::set-output name=matrix::[]'
+            exit 0
+          fi
+
+          matrix=$(find domains libraries/dotnet -name ".check-versions.json" | egrep "$pattern" | while read file; do tr -d '\n' < "$file"; done | jq -sc '. | flatten')
 
           echo "::set-output name=matrix::${matrix}"
 
@@ -54,6 +61,7 @@ jobs:
   check-version:
     runs-on: ubuntu-latest
     needs: define-matrix
+    if: ${{ needs.define-matrix.outputs.matrix != '[]' }}
     strategy:
       matrix:
         configuration: ${{ fromJson(needs.define-matrix.outputs.matrix) }}
