--- a/.github/workflows/build-library.yaml
+++ b/.github/workflows/build-library.yaml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 concurrency:
-  group: ${{ github.ref }}-Library
+  group: ${{ github.ref }}-library
   cancel-in-progress: false
 
 jobs:
@@ -40,11 +40,19 @@ jobs:
           git diff --stat=10000 main
           echo '::endgroup::'
 
+          set +e
           pattern=$(git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs printf '^%s|' | sed 's/|$//g')
+          set -e
 
           echo '::group::Relevance pattern'
           echo "$pattern"
           echo '::endgroup::'
+
+          if [ -z "$pattern" ]; then
+            echo 'Relevance pattern is empty, emitting empty matrix.'
+            echo '::set-output name=matrix::[]'
+            exit 0
+          fi
 
           matrix=$(find libraries/dotnet -name "*.csproj" ! -name "*.Tests.csproj" -exec dirname {} \; | egrep "$pattern" | while read directory; do printf '{"project": "%s"}' "$directory"; done | jq -sc '.')
 
@@ -57,6 +65,7 @@ jobs:
   build-library:
     runs-on: ubuntu-latest
     needs: define-matrix
+    if: ${{ needs.define-matrix.outputs.matrix != '[]' }}
     strategy:
       matrix:
         projects: ${{ fromJson(needs.define-matrix.outputs.matrix) }}
