--- a/libraries/dotnet/EnergyOriginEventStore/EnergyOriginEventStore/EnergyOriginEventStore.csproj
+++ b/libraries/dotnet/EnergyOriginEventStore/EnergyOriginEventStore/EnergyOriginEventStore.csproj
@@ -18,4 +18,10 @@
     <PackageReference Include="EnergyOriginDateTimeExtension" Version="1.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+	  <_Parameter1>$(AssemblyName).Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
