--- a/libraries/dotnet/EnergyOriginEventStore/.devcontainer/devcontainer.json
+++ b/libraries/dotnet/EnergyOriginEventStore/.devcontainer/devcontainer.json
@@ -1,15 +1,18 @@
 {
-	"name": "C# (.NET)",
-	"build": {
-		"dockerfile": "Dockerfile",
-		"args": {}
-	},
-	"settings": {},
-	"extensions": [
-		"ms-dotnettools.csharp",
-		"formulahendry.dotnet-test-explorer",
-		"ryanluker.vscode-coverage-gutters"
-	],
-	"postCreateCommand": "dotnet restore",
-	"remoteUser": "vscode"
+    "name": "C# (.NET)",
+    "build": {
+        "dockerfile": "Dockerfile",
+        "args": {}
+    },
+    "settings": {
+        "editor.formatOnSave": true
+    },
+    "extensions": [
+        "EditorConfig.EditorConfig",
+        "ms-dotnettools.csharp",
+        "formulahendry.dotnet-test-explorer",
+        "ryanluker.vscode-coverage-gutters"
+    ],
+    "postCreateCommand": "dotnet restore",
+    "remoteUser": "vscode"
 }
