--- a/.github/workflows/build-libraries.yaml
+++ b/.github/workflows/build-libraries.yaml
@@ -3,6 +3,9 @@ name: Build library
 on:
   pull_request:
     branches: [main]
+  push:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.ref }}-library
