--- a/.github/workflows/build-libraries.yaml
+++ b/.github/workflows/build-libraries.yaml
@@ -8,10 +8,6 @@ on:
     branches:
       - main
 
-concurrency:
-  group: ${{ github.ref }}-library
-  cancel-in-progress: false
-
 jobs:
   define-matrix:
     runs-on: ubuntu-latest
@@ -33,6 +29,8 @@ jobs:
       - name: Find relevant projects
         id: define-matrix
         shell: bash
+        env:
+          REF: ${{ github.ref }}
         run: |
           pattern=$(find libraries/dotnet -type d -mindepth 1 -maxdepth 1 -exec printf '^%s|' {} \; | sed 's/|$//g')
 
@@ -45,7 +43,11 @@ jobs:
           echo '::endgroup::'
 
           set +e
-          pattern=$(git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs printf '^%s|' | sed 's/|$//g')
+          if [ "$REF" = "refs/heads/main" ]; then
+            pattern=$(git show --stat=10000 main | egrep '^ [^ ]' | grep '|' | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs printf '^%s|' | sed 's/|$//g')
+          else
+            pattern=$(git diff --stat=10000 main | grep '|' | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs printf '^%s|' | sed 's/|$//g')
+          fi
           set -e
 
           echo '::group::Relevance pattern'
