--- a/.github/workflows/build-libraries.yaml
+++ b/.github/workflows/build-libraries.yaml
@@ -2,11 +2,11 @@ name: Build library
 
 on:
   pull_request:
-    branches: [main]
-
-concurrency:
-  group: ${{ github.ref }}-library
-  cancel-in-progress: false
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
   define-matrix:
@@ -29,24 +29,33 @@ jobs:
       - name: Find relevant projects
         id: define-matrix
         shell: bash
+        env:
+          REF: ${{ github.ref }}
         run: |
-          pattern=$(find libraries/dotnet -type d -mindepth 1 -maxdepth 1 -exec printf '^%s|' {} \; | sed 's/|$//g')
+          pattern=$(find libraries/dotnet -mindepth 1 -maxdepth 1 -type d -exec printf '^%s|' {} \; | sed 's/|$//g')
 
-          echo '::group::Search pattern'
+          echo 'Search pattern:'
           echo "$pattern"
-          echo '::endgroup::'
 
           echo '::group::Change set'
+          if [ "$REF" = "refs/heads/main" ]; then
+            git show --stat=10000 main
+          else
+            git diff --stat=10000 main
+          fi
           git diff --stat=10000 main
           echo '::endgroup::'
 
           set +e
-          pattern=$(git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs printf '^%s|' | sed 's/|$//g')
+          if [ "$REF" = "refs/heads/main" ]; then
+            pattern=$(git show --stat=10000 main | egrep '^ [^ ]' | grep '|' | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs -r printf '^%s|' | sed 's/|$//g')
+          else
+            pattern=$(git diff --stat=10000 main | grep '|' | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs -r printf '^%s|' | sed 's/|$//g')
+          fi
           set -e
 
-          echo '::group::Relevance pattern'
+          echo 'Relevance pattern:'
           echo "$pattern"
-          echo '::endgroup::'
 
           if [ -z "$pattern" ]; then
             echo 'Relevance pattern is empty, emitting empty matrix.'
