--- a/.github/workflows/check-versions.yml
+++ b/.github/workflows/check-versions.yml
@@ -28,21 +28,19 @@ jobs:
         run: |
           pattern=$(find domains libraries/dotnet -mindepth 1 -maxdepth 1 -type d -exec printf '^%s|' {} \; | sed 's/|$//g')
 
-          echo '::group::Search pattern'
+          echo 'Search pattern:'
           echo "$pattern"
-          echo '::endgroup::'
 
           echo '::group::Change set'
           git diff --stat=10000 main
           echo '::endgroup::'
 
           set +e
-          pattern=$(git diff --stat=10000 main | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs -r printf '^%s|' | sed 's/|$//g')
+          pattern=$(git diff --stat=10000 main | grep '|' | sed 's/^ *//g' | egrep -o "$pattern" | sort -u | xargs -r printf '^%s|' | sed 's/|$//g')
           set -e
 
-          echo '::group::Relevance pattern'
+          echo 'Relevance pattern:'
           echo "$pattern"
-          echo '::endgroup::'
 
           if [ -z "$pattern" ]; then
             echo 'Relevance pattern is empty, emitting empty matrix.'
