--- a/.github/workflows/build-emissions.yaml
+++ b/.github/workflows/build-emissions.yaml
@@ -86,7 +86,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Update environment
-        uses: Energinet-DataHub/energy-origin/.github/actions/update-base-environment@preview/oidc-mock
+        uses: ./.github/actions/update-base-environment
         with:
           env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
           app_name: ${{ needs.release-chart.outputs.chart-name }}
