--- a/.github/workflows/build-oidc-mock.yaml
+++ b/.github/workflows/build-oidc-mock.yaml
@@ -84,9 +84,9 @@ jobs:
     if: github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/')
     steps:
       - uses: actions/checkout@v3
-        
+
       - name: Update environment
-        uses: Energinet-DataHub/energy-origin/.github/actions/update-base-environment@preview/oidc-mock
+        uses: ./.github/actions/update-base-environment
         with:
           env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
           app_name: ${{ needs.release-chart.outputs.chart-name }}
