--- a/domains/auth/Auth.API/API/Properties/launchSettings.json
+++ b/domains/auth/Auth.API/API/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:39069",
-      "sslPort": 44358
+      "applicationUrl": "http://localhost:64839",
+      "sslPort": 44305
     }
   },
   "profiles": {
-    "Auth.API": {
+    "API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7176;http://localhost:5176",
+      "applicationUrl": "https://localhost:7231;http://localhost:5231",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
