--- a/domains/auth/Auth.API/API/Properties/launchSettings.json
+++ b/domains/auth/Auth.API/API/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -16,7 +16,14 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7231;http://localhost:5231",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "InternalTokenSecret": "INTERNALTOKENSECRET",
+        "TokenExpiryTime": 1,
+        "Scope": "SCOPE, SCOPE1",
+        "AmrValues": "AMRVALUES",
+        "OidcUrl": "OIDCURL",
+        "OidcClientId": "OIDCCLIENTID",
+        "OidcClientSecret": "OIDCCLIENTSECRET"
       }
     },
     "IIS Express": {
