--- a/.github/workflows/sonar-analysis.yaml
+++ b/.github/workflows/sonar-analysis.yaml
@@ -46,4 +46,4 @@ jobs:
           dotnet sonarscanner begin -k:"${{ env.SOLUTION_NAME }}" -o:"${{ env.ORGANIZATION }}" -d:sonar.login="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io"
           dotnet build
           dotnet test --collect "Code Coverage"
-          dotnet sonarscanner end -d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          dotnet sonarscanner end -d:sonar.login="${{ secrets.SONAR_TOKEN }}" -d:sonar.host.url="https://sonarcloud.io"
