--- a/.github/workflows/sonar-analysis.yaml
+++ b/.github/workflows/sonar-analysis.yaml
@@ -17,7 +17,7 @@ jobs:
   sonar-analysis:
     runs-on: ubuntu-latest
     env:
-      SOLUTION_NAME: "eo-emissions"
+      SOLUTION_NAME: "energy-origin"
       SOLUTION_PATH: "domains/emissions/Emissions.API"
       DOTNET_VERSION: "6.0.302"
 
