--- a/.github/workflows/sonar-analysis.yaml
+++ b/.github/workflows/sonar-analysis.yaml
@@ -17,7 +17,7 @@ jobs:
   sonar-analysis:
     runs-on: ubuntu-latest
     env:
-      SOLUTION_NAME: "energy-origin"
+      SOLUTION_NAME: "Energinet-DataHub_energy-origin"
       SOLUTION_PATH: "domains/emissions/Emissions.API"
       DOTNET_VERSION: "6.0.302"
 
@@ -40,6 +40,9 @@ jobs:
           dotnet tool install --global dotnet-sonarscanner
 
       - name: Run Analysis
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: bash
         working-directory: ${{ env.SOLUTION_PATH }}
         run: |
