--- a/domains/auth/Auth.API/API/Properties/launchSettings.json
+++ b/domains/auth/Auth.API/API/Properties/launchSettings.json
@@ -25,7 +25,8 @@
             "OidcClientId": "OIDCCLIENTID",
             "OidcClientSecret": "OIDCCLIENTSECRET",
             "BaseUrl": "BASEURL",
-            "SecretKey": "mysmallkey123456"
+            "SecretKey": "mysmallkey123456",
+            "CookieName": "Authorization"
         }
     },
     "IIS Express": {
