--- a/domains/auth/Auth.API/API/Properties/launchSettings.json
+++ b/domains/auth/Auth.API/API/Properties/launchSettings.json
@@ -26,7 +26,14 @@
             "OidcClientSecret": "OIDCCLIENTSECRET",
             "BaseUrl": "BASEURL",
             "SecretKey": "mysmallkey123456",
-            "CookieName": "Authorization"
+            "CookieName": "Authorization",
+            "CookiePath": "/",
+            "CookieDomain": "localhost",
+            "CookieHttpOnly": "true",
+            "CookieSameSite": "Strict",
+            "CookieSecure": "true",
+            "CookieCreateExpires": "6"
+
         }
     },
     "IIS Express": {
