--- a/domains/auth/Auth.API/API/Properties/launchSettings.json
+++ b/domains/auth/Auth.API/API/Properties/launchSettings.json
@@ -32,7 +32,7 @@
             "CookieHttpOnly": "true",
             "CookieSameSite": "Strict",
             "CookieSecure": "true",
-            "CookieCreateExpires": "6"
+            "CookieExpiresTimeDelta": "6"
         }
     },
     "IIS Express": {
