Add validation to domains too

--- a/.github/workflows/build-measurements.yaml
+++ b/.github/workflows/build-measurements.yaml
@@ -43,6 +43,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Validate image
+        uses: ./.github/actions/dotnet-validate-domain
+        with:
+          solution-file-folder: domains/measurements/Measurements.API/
+
       - name: Build image
         uses: Energinet-DataHub/.github/.github/actions/build-and-push-container@main
         with:
