--- a/.github/actions/dotnet-validate-domain/action.yaml
+++ b/.github/actions/dotnet-validate-domain/action.yaml
@@ -36,7 +36,7 @@ runs:
     - name: Test
       shell: bash
       working-directory: ${{ inputs.solution-file-folder }}
-      run: dotnet test --no-restore --verbosity normal *.Tests
+      run: dotnet test --no-restore --verbosity normal
 
     - name: Build
       shell: bash
