--- a/libraries/dotnet/EnergyOriginEventStore/EnergyOriginEventStore/EnergyOriginEventStore.csproj
+++ b/libraries/dotnet/EnergyOriginEventStore/EnergyOriginEventStore/EnergyOriginEventStore.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="EnergyOriginDateTimeExtension" Version="1.1.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.6" />
   </ItemGroup>
 
   <ItemGroup>
