--- a/domains/auth/Auth.API/Tests/Tests.csproj
+++ b/domains/auth/Auth.API/Tests/Tests.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
 	  
     <IsPackable>false</IsPackable>
+	  
+    <RootNamespace>Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
