--- a/domains/auth/Auth.API/API/Properties/launchSettings.json
+++ b/domains/auth/Auth.API/API/Properties/launchSettings.json
@@ -27,7 +27,8 @@
             "BaseUrl": "BASEURL",
             "ServiceUrl": "https://localhost/api/auth",
             "OidcLoginCallbackPath": "'/oidc/login/callback'",
-            "SecretKey": "mysmallkey123456",
+            "IdTokenSecretKey": "mysmallkey123456",
+            "StateSecretKey": "mysmallkey123456",
             "CookieName": "Authorization",
             "CookiePath": "/",
             "CookieDomain": "localhost",
