--- a/libraries/dotnet/EnergyOriginEventStore/EnergyOriginEventStore/EnergyOriginEventStore.csproj
+++ b/libraries/dotnet/EnergyOriginEventStore/EnergyOriginEventStore/EnergyOriginEventStore.csproj
@@ -15,7 +15,8 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="EnergyOriginDateTimeExtension" Version="1.1.3" />
+    <PackageReference Include="EnergyOriginDateTimeExtension" Version="1.2.0" />
+    <PackageReference Include="Dapper.Extensions.PostgreSQL" Version="4.0.5" />
   </ItemGroup>
 
   <ItemGroup>
