--- a/.github/workflows/snyk-test.yaml
+++ b/.github/workflows/snyk-test.yaml
@@ -5,6 +5,7 @@ on: push
 jobs:
   security:
     runs-on: ubuntu-latest
+    working-directory: domains/emissions/Emissions.API/
     steps:
       - uses: actions/checkout@v3
 
@@ -15,7 +16,6 @@ jobs:
 
       - name: Restore
         shell: bash
-        working-directory: domains/emissions/Emissions.API/
         run: dotnet restore
 
       - name: monitor
@@ -24,11 +24,10 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN_TMP }}
         with:
           command: monitor
-          args: "--file=domains/emissions/Emissions.API/Emissions.API.sln --project-name=Emissions"
+          args: "--file=Emissions.API.sln --project-name=Emissions"
 
       - name: code test
         uses: snyk/actions/dotnet@master
-        working-directory: domains/emissions/Emissions.API/
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN_TMP }}
         with:
