--- a/.github/workflows/snyk-test.yaml
+++ b/.github/workflows/snyk-test.yaml
@@ -18,25 +18,10 @@ jobs:
         working-directory: domains/emissions/Emissions.API/
         run: dotnet restore
 
-      - name: test
-        uses: snyk/actions/dotnet@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN_TMP }}
-        with:
-          command: test
-          args: "--project-name=Emissions --file=domains/emissions/Emissions.API/Emissions.API.sln"
-
       - name: monitor
         uses: snyk/actions/dotnet@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN_TMP }}
         with:
           command: monitor
-          args: "--project-name=Emissions --file=domains/emissions/Emissions.API/Emissions.API.sln"
-
-      - name: code test
-        uses: snyk/actions/dotnet@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN_TMP }}
-        with:
-          command: "code test"
+          args: "--project-name-prefix=Emissions --org=6ec29e50-bb20-4486-81f0-b2b2f1b7731e --file=domains/emissions/Emissions.API/Emissions.API.sln"
