--- a/.github/workflows/check-licenses.yml
+++ b/.github/workflows/check-licenses.yml
@@ -68,7 +68,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Check license
-        uses: ./.github/actions/dotnet-check-license
+        uses: ./actions/dotnet-check-license
         with:
           project-folder: ${{ matrix.projects.project }}
           license-mapping-file: .mapped-licenses.json
