rename launc profile

--- a/domains/certificates/Query.API/API/Properties/launchSettings.json
+++ b/domains/certificates/Query.API/API/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "src": {
+    "Query.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
